[package]
name = "highs"
version = "1.4.1"
authors = ["Ophir LOJKINE", "rust-or"]
edition = "2021"
description = "Safe rust bindings for the HiGHS linear programming solver. See http://highs.dev."
license = "MIT"
repository = "https://github.com/rust-or/highs"
keywords = ["linear-programming", "optimization", "math", "solver"]

[dependencies]
highs-sys = { git = "https://github.com/furiosa-ai/highs-sys.git", tag = "v1.4.1" }
log = "0.4"
